ko/mysql-8.4/0.0.4/reference.mdx
---
noindex: true
title: 시스템 참조
description: 확장 메타데이터 및 서버 상태를 쿼리하는 VillageSQL 시스템 뷰와 변수
---

아래 표준 SQL 인터페이스를 사용하여 확장 메타데이터 및 서버 상태를 쿼리합니다.

---

## 시스템 뷰

### INFORMATION_SCHEMA.EXTENSIONS

현재 설치된 VillageSQL 확장을 모두 나열합니다.

<Note>
`INSTALL EXTENSION` 및 `UNINSTALL EXTENSION`은 VillageSQL SQL 확장입니다.
이는 표준 MySQL 8.4 구문의 일부가 아닙니다.
</Note>

**알려진 열:**

| 열 | 유형 | 설명 |
|--------|------|-----------|
| `EXTENSION_NAME` | varchar | 설치된 확장의 이름 |
| `EXTENSION_VERSION` | varchar | 확장에서 보고한 버전 문자열 |

**예시:**
```sql
-- Install an extension (VillageSQL-specific syntax)
INSTALL EXTENSION vsql_complex;

-- List all installed extensions
SELECT * FROM INFORMATION_SCHEMA.EXTENSIONS;

-- Check a specific extension's version
SELECT EXTENSION_VERSION
FROM INFORMATION_SCHEMA.EXTENSIONS
WHERE EXTENSION_NAME = 'vsql_complex';
```

**예시 출력** (실제 버전 문자열은 설치된 확장에 따라 다름):
```
+------------------+-------------------+
| EXTENSION_NAME   | EXTENSION_VERSION |
+------------------+-------------------+
| vsql_complex     | 0.0.1             |
| vsql_uuid        | 0.2.1             |
+------------------+-------------------+
```

`EXTENSION_NAME` 값은 `make_extension()`에 전달된 이름과 일치하는 소문자입니다.

이 뷰는 현재 설치된 상태를 반영합니다.

---

### INFORMATION_SCHEMA.COLUMNS (사용자 정의 유형)

사용자 정의 확장 유형을 사용하는 열은 표준 `INFORMATION_SCHEMA.COLUMNS` 뷰를 통해 표시됩니다. 사용자 정의 유형은 `DATA_TYPE` 및 `COLUMN_TYPE` 열에서 `extension_name.type_name` 형식으로 표시됩니다 (예: `vsql_complex.COMPLEX`).

**예시:**
```sql
-- Find all columns using custom extension types
SELECT TABLE_SCHEMA, TABLE_NAME, COLUMN_NAME, DATA_TYPE
FROM INFORMATION_SCHEMA.COLUMNS
WHERE DATA_TYPE LIKE '%.%'
ORDER BY TABLE_SCHEMA, TABLE_NAME;

-- Find columns using a specific extension's types
SELECT TABLE_SCHEMA, TABLE_NAME, COLUMN_NAME, DATA_TYPE
FROM INFORMATION_SCHEMA.COLUMNS
WHERE DATA_TYPE LIKE 'vsql_complex.%';
```

**샘플 출력:**
```
+--------------+------------+-------------+---------------------+
| TABLE_SCHEMA | TABLE_NAME | COLUMN_NAME | DATA_TYPE           |
+--------------+------------+-------------+---------------------+
| mydb         | signals    | impedance   | vsql_complex.COMPLEX|
| mydb         | signals    | frequency   | vsql_complex.COMPLEX|
+--------------+------------+-------------+---------------------+
```

---

### INFORMATION_SCHEMA.EXTENSION_REGISTRATION

로드된 각 확장에 대한 메모리 내 VEF 등록 구조체를 JSON 문서로 노출합니다. `INSTALL EXTENSION` 후 서버가 확장의 함수, 유형 및 시스템 변수를 올바르게 해석했는지 확인하기 위해 사용합니다.

```sql
SELECT EXTENSION_NAME, NEGOTIATED_PROTOCOL, REGISTRATION_JSON
FROM INFORMATION_SCHEMA.EXTENSION_REGISTRATION
WHERE EXTENSION_NAME = 'vsql_complex';
```

| 열 | 유형 | 설명 |
|--------|------|-----------|
| `EXTENSION_NAME` | `VARCHAR(64)` | 설치된 확장의 이름. |
| `NEGOTIATED_PROTOCOL` | `BIGINT UNSIGNED` | 확장과 서버 간 협상된 VEF 프로토콜 버전. |
| `REGISTRATION_JSON` | `longtext` | `vef_registration_t` 구조체의 JSON 직렬화로, `funcs` 및 `types` 배열을 포함합니다. |

---

## 일반 쿼리

### 확장 종속성 찾기

제거하기 전에 특정 확장의 유형을 사용하는 열을 찾습니다:

```sql
SELECT TABLE_SCHEMA, TABLE_NAME, COLUMN_NAME, DATA_TYPE
FROM INFORMATION_SCHEMA.COLUMNS
WHERE DATA_TYPE LIKE 'vsql_complex.%';
```

### 모든 확장 및 사용자 정의 유형 열 목록

```sql
-- All installed extensions
SELECT EXTENSION_NAME, EXTENSION_VERSION
FROM INFORMATION_SCHEMA.EXTENSIONS
ORDER BY EXTENSION_NAME;

-- All columns using custom types across all extensions
SELECT TABLE_SCHEMA, TABLE_NAME, COLUMN_NAME, DATA_TYPE
FROM INFORMATION_SCHEMA.COLUMNS
WHERE DATA_TYPE LIKE '%.%'
ORDER BY DATA_TYPE, TABLE_SCHEMA, TABLE_NAME;
```

### 확장 유형을 사용하는 테이블 찾기

```sql
SELECT TABLE_SCHEMA, TABLE_NAME, COLUMN_NAME, DATA_TYPE
FROM INFORMATION_SCHEMA.COLUMNS
WHERE DATA_TYPE LIKE 'vsql_complex.%'
ORDER BY TABLE_SCHEMA, TABLE_NAME;
```

---

## 시스템 변수

### veb_dir

런타임 시 읽기 전용입니다. 서버가 `.veb` 확장 패키지 파일을 찾는 디렉토리 경로입니다. `[mysqld]` 섹션의 `my.cnf`에서 설정해야 하며, 서버 재시작 없이는 변경할 수 없습니다.

```sql
SHOW VARIABLES LIKE 'veb_dir';
```

**범위:** 글로벌, 런타임 시 읽기 전용입니다. `my.cnf`에서 구성합니다:

```ini
[mysqld]
veb_dir=/path/to/extensions/
```

단일 디렉토리만 지원됩니다. 배치 및 문제 해결을 위해 [확장 관리](/ko/mysql-8.4/0.0.4/managing)를 참조하세요.

---

### villagesql_server_version

읽기 전용 글로벌 변수입니다. 서버 바이너리에 컴파일된 VillageSQL 버전 문자열을 반환합니다. 이는 내부 메타데이터 카탈로그 버전을 추적하는 `villagesql_schema_version`과 구분됩니다.

```sql
SELECT @@villagesql_server_version;
-- Example output: 0.0.4 (release builds)
-- Development builds include a commit suffix: 0.0.4-dev-03d249dd

-- Show all VillageSQL system variables at once
SHOW VARIABLES LIKE 'villagesql_%';
```

**범위:** 글로벌, 읽기 전용입니다. 런타임 시 설정할 수 없습니다.

---

### villagesql_vef_server_protocol

읽기 전용 글로벌 변수입니다. 이 서버 빌드에서 지원하는 최고의 VEF 프로토콜 버전을 반환합니다. 확장 작성자는 이 값을 `types.h`의 프로토콜 상수와 비교하여 등록 중 사용 가능한 ABI 기능을 결정할 수 있습니다.

```sql
SELECT @@villagesql_vef_server_protocol;
```

| 속성 | 값 |
|------|-----|
| **범위** | 글로벌 |
| **접근** | 읽기 전용 |
| **유형** | 부호 없는 정수 (`0`–`255`) |
| **현재 값** | `4` (`VEF_PROTOCOL_4`) |

이 값은 컴파일 타임 상수 `vef_server_protocol_version`을 반영하며, 런타임 시 변경할 수 없습니다.

---

## 다음 단계

<CardGroup cols={2}>
  <Card
    title="확장 관리"
    icon="sliders"
    href="/ko/mysql-8.4/0.0.4/managing"
  >
    확장 모니터링 및 문제 해결
  </Card>
  <Card
    title="확장 설치"
    icon="download"
    href="/ko/mysql-8.4/0.0.4/install"
  >
    새로운 확장 추가
  </Card>
  <Card
    title="확장 아키텍처"
    icon="sitemap"
    href="/ko/mysql-8.4/0.0.4/architecture"
  >
    내부 구조 이해
  </Card>
  <Card
    title="사용 가능한 확장"
    icon="list"
    href="/ko/extensions"
  >
    확장 카탈로그 브라우징
  </Card>
</CardGroup>